--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     }
     
     body .desktop-only{
-        display: initial;
+        display: flex;
     }
 }
 
@@ -69,16 +69,28 @@ nav ul li a:hover{
 nav .mobile-menu{
     position: absolute;
     width: 85%;
+    top: 0;
 }
 
 nav .mobile-menu div{
-    transform: translateY(70%);
+    transform: translateY(45%);
+    transform-origin: top;
+    padding: 0;
     display: flex;
     flex-direction: column;
     gap: var(--xlg-space);
     background-color: #fff;
     color: #000;
     width: 100%;
+    max-height: 0;
+    overflow: hidden;
+    transition: 0.2s;
+    height: 100%;
+}
+
+nav .mobile-menu.active div{
+    max-height: 250px;
+    overflow: hidden;
     padding: var(--xlg-space) 0;
 }
 
