--- a/styles/store.css
+++ b/styles/store.css
@@ -177,6 +177,7 @@ section input{
     body .hero .img-wrapper img{
         height: auto;
         width: 100%;
+        margin-top: -200px;
     }
 }
 
