--- a/styles/styles.css
+++ b/styles/styles.css
@@ -153,3 +153,22 @@ button:hover{
     height: 100vh;
 }
 
+/* footer */
+body footer .top{
+    background-color: var(--color-primary);
+    color: #fff;
+    padding: var(--xlg-space);
+}
+
+body footer .top .social{
+    display: flex;
+    gap: var(--xlg-space);
+    font-size: 32px;
+}
+
+body footer .bottom{
+    background-color: var(--color-primary-light);
+    color: #fff;
+    padding: var(--xlg-space);
+}
+
