--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,6 +36,7 @@
 
 body{
     background-color: #F2F2F2;
+    min-height: 100vh;
 }
 
 /*nav*/
@@ -54,12 +55,47 @@ nav ul{
     list-style: none;
 }
 
+nav .selector{
+    position: relative;
+}
+
+nav .selector:hover ul{
+    max-height: 300px;
+    padding: var(--md-space);
+}
+
+nav .selector ul a:hover{
+
+}
+
+nav .selector ul{
+    overflow: hidden;
+    transition: 0.2s;
+    max-height: 0;
+    background-color: #fff;
+    padding: 0;
+    color: #000;
+    display: flex;
+    flex-direction: column;
+    gap: var(--md-space);
+    position: absolute;
+    width: 100%;
+}
+
 nav ul li a{
     text-decoration: none;
     color: inherit;
     padding: var(--md-space) var(--xlg-space);
     border-radius: var(--lg-space);
     cursor: pointer;
+}
+
+nav .selector li a{
+    padding: 0;
+}
+
+nav .selector li a:hover{
+    background-color: #fff;
 }
 
 nav ul li a:hover{
